# webloc.py

./: README.md  package.json  setup.cfg  setup.py
scripts/: .webloc.sh  webloc
tests/examples/: cli.sh  functions.py
webloc/: __init__.py  __main__.py
