[metadata]
name = webloc
version = 2018.11.20
url = https://github.com/looking-for-a-job/webloc.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = webloc

[options]
install_requires = 
	Click
	public
	setuptools
py_modules = 
	webloc
