# https://pypi.org/project/setupcfg-generator/
[metadata]
name = webloc
version = 2018.11.20
url = https://github.com/looking-for-a-job/webloc.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = webloc

[options]
install_requires = 
	click
	public
	setuptools
packages = 
	webloc
